Switch to parallel tasks (instead of native threads)

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /bin/Debug/net6.0
 /.vs/Olympus_QUIZ/v17
 /.vs/Olympus_QUIZ/FileContentIndex
+/.vs/Olympus_QUIZ/DesignTimeBuild/.dtbcache.v2
+/.vs/ProjectEvaluation
